syntax = "proto3";
package model;

option go_package = "github.com/Ultimate-Super-WebDev-Corp/gateway/gen/services/model";

message Session {
  string Id = 1;
  int64 CustomerId = 2;
  int64 PasswordId = 3;
  int64 UpdatedAt = 4; //nsec utc
}
